@@ -4,11 +4,14 @@
 \alias{fitSSTimeSeries}
 \title{Discover differentially abundant time intervals using SS-Anova}
 \usage{
-fitSSTimeSeries(obj, feature, class, time, id, lvl = NULL, C = 0,
-  B = 1000, norm = TRUE, log = TRUE, sl = 1000, ...)
+fitSSTimeSeries(obj, formula, feature, class, time, id, lvl = NULL,
+  include = c("class", "time:class"), C = 0, B = 1000, norm = TRUE,
+  log = TRUE, sl = 1000, ...)
 }
 \arguments{
 \item{obj}{metagenomeSeq MRexperiment-class object.}
+
+\item{formula}{Formula for ssanova.}
 
 \item{feature}{Name or row of feature of interest.}
 
@@ -19,6 +22,8 @@ fitSSTimeSeries(obj, feature, class, time, id, lvl = NULL, C = 0,
 \item{id}{Name of column in phenoData of MRexperiment-class object for sample id.}
 
 \item{lvl}{Vector or name of column in featureData of MRexperiment-class object for aggregating counts (if not OTU level).}
+
+\item{include}{Parameters to include in prediction.}
 
 \item{C}{Value for which difference function has to be larger or smaller than (default 0).}
 
@@ -61,7 +66,7 @@ Talukder H, Paulson JN, Bravo HC. (Submitted)
 \examples{
 data(mouseData)
 res = fitSSTimeSeries(obj=mouseData,feature="Actinobacteria",
-   class="status",id="mouseID",time="relativeTime",lvl='class',B=10)
+   class="status",id="mouseID",time="relativeTime",lvl='class',B=2)
 }
 \seealso{
 \code{\link{cumNorm}} \code{\link{ssFit}} \code{\link{ssIntervalCandidate}} \code{\link{ssPerm}} \code{\link{ssPermAnalysis}} \code{\link{plotTimeSeries}}
